fix tooltip icon alignment

--- a/packages/sit-onyx/src/styles/mixins/input.scss
+++ b/packages/sit-onyx/src/styles/mixins/input.scss
@@ -103,6 +103,7 @@
     #{$base-selector}__error-message {
       display: flex;
       color: var(--onyx-color-base-danger-500);
+      align-items: center;
     }
   }
 
